Import of MLEHMANN/Net-SNMP-XS-0.03 from CPAN.
gitpan-cpan-distribution: Net-SNMP-XS
gitpan-cpan-version:      0.03
gitpan-cpan-path:         MLEHMANN/Net-SNMP-XS-0.03.tar.gz
gitpan-cpan-author:       MLEHMANN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Net::SNMP::XS
 
+0.03  Sun Apr 12 02:48:00 CEST 2009
+	- support leading_dot setting.
+	- add xs replacement for oid_base_match.
+	- add xs replacement for oid_lex_sort, _index_cmp (only with glibc).
+
 0.02  Sat Apr 11 06:21:38 CEST 2009
 	- first CPAN release.
 
