Import of MLEHMANN/Net-SNMP-XS-1.0 from CPAN.
gitpan-cpan-distribution: Net-SNMP-XS
gitpan-cpan-version:      1.0
gitpan-cpan-path:         MLEHMANN/Net-SNMP-XS-1.0.tar.gz
gitpan-cpan-author:       MLEHMANN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Net::SNMP::XS
 
+1.0   Wed May  5 22:36:27 CEST 2010
+	- implement the last missing bit, which I forgot, and broke
+          snmpv3.
+        - use a slightly slower, but more robust way of fetching/storing
+          the buffer state for the parser.
+
 0.03  Sun Apr 12 02:48:00 CEST 2009
 	- support leading_dot setting.
 	- add xs replacement for oid_base_match.
