--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Net::SNMP::XS
 
+1.3   Thu Sep 18 04:51:17 CEST 2014
+	- fix a potential leak.
+
 1.2   Tue Jan 25 20:26:50 CET 2011
 	- fix a bug where the internal message cache wouldn't be refreshed
           when perl reuses SVs, causing runtime errors and possibly crashes.
