--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Net::SNMP::XS
 
+1.31  Thu Oct 23 17:57:44 CEST 2014
+	- change dependency check to not include a version,
+          as the Net::SNMP version number isn't monotonically increasing.
+
 1.3   Thu Sep 18 04:51:17 CEST 2014
 	- fix a potential leak.
 
